--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   #character {
     width: 50px;
     height: 50px;
-    background-image: url(./img/character.png);
+    background-image: url(img/character.png);
     background-size: 50px 50px;
     position: relative;
     top: 150px;
@@ -47,7 +47,7 @@
     top: 110px;
     left: 580px;
   
-    background-image: url(./img/object.png);
+    background-image: url("img/object.png");
     background-size: 20px 40px;
   
     animation: block 1s infinite linear;
